# ASG-Middleware

./: .dockerignore  .env.example  .env.production.example  .gcloudignore  .gitignore  Dockerfile  Dockerfile.core  cloudbuild.core.yaml  cloudbuild.yaml  cloudbuild_verify.yaml  desktop_app.py  generate_kyc_pdf.py  main.py  requirements.txt  setup_server.sh
.github/agents/: qadev.agent.md
docs/: DEPLOYMENT.md  PRODUCTION_READINESS_CHECKLIST.md  document-ai-hebrew-training.md  soc2_iso27001_readiness.md
docs/architecture/: M1_STARTUP_STALL.md  MONOREPO_RESTRUCTURE.md  SPLIT_BLUEPRINT.md  m1-ecosystem-completion-spec.md  post-launch-master-plan.md  v0.2.4-next-phase-spec.md
docs/runbooks/: break-glass.md  ita-production-cutover.md  v0.2.4-real-backends-cutover.md
front-end/: DESKTOP_BUILD_RUNBOOK.md
front-end/accountant-portal/: .env.local.example  .gitignore  package-lock.json  package.json
front-end/accountant-portal/src-tauri/: Cargo.toml  tauri.conf.json
front-end/accountant-portal/src-tauri/src/: lib.rs
front-end/business-portal/: .env.local.example  .firebaserc  .gcloudignore  .gitignore  cloudbuild.yaml  firebase.json  next.config.ts  package-lock.json  package.json
front-end/ceo-dashboard/: .gitignore  README.md  dashboard.html  onboarding.html  package-lock.json  package.json  tailwind.config.js  tailwind.css
front-end/ceo-dashboard-v3/: index.html  package-lock.json  package.json  vite.config.js
front-end/ceo-dashboard/src-tauri/: Cargo.toml  tauri.conf.json
front-end/ceo-dashboard/src-tauri/src/: keychain.rs  lib.rs
infra/terraform/: .gitignore  README.md  main.tf  outputs.tf  secrets.tf  variables.tf  versions.tf
legacy/desktop/: client_portal.html  dashboard.html  database.py
scripts/: deploy_provider_flip.sh  e2e_onboarding_smoke.py  provision_bigquery_audit.sh  rollback.sh  verify_kyc_key.py
server_files/app/: main.py  main_core.py  migrate_phase10.py  migrate_phase11.py  migrate_phase12.py  migrate_phase13.py  migrate_phase14.py  migrate_phase15.py  migrate_phase16.py  migrate_phase17.py  migrate_phase18.py  migrate_phase19.py  migrate_phase20.py  migrate_phase21.py  migrate_phase4.py  migrate_phase5.py  migrate_phase6.py  migrate_phase6b.py  migrate_phase7.py  migrate_phase8.py  migrate_phase9.py
server_files/scripts/: __init__.py  bootstrap_admin.py  issue_break_glass_token.py  mint_api_key.py  verify-perimeter.sh
server_files/tests/: mock_whatsapp_inbound.py  test_dual_write_audit.py  test_exports.py  test_ita_pipeline.py  test_ocr_pipeline.py  test_revenue_share.py  test_tax_engine.py
services/: ita_api_service.py
services/aurora-api-core/: Dockerfile
services/aurora-main-api/: .env.nonprod.example  Dockerfile  alembic.ini
shared_packages/aurora_shared/: pyproject.toml
shared_packages/aurora_shared/aurora_shared/: __init__.py
shared_packages/aurora_shared/aurora_shared/config/: __init__.py  secrets.py
shared_packages/aurora_shared/aurora_shared/database/: __init__.py  connection.py  models.py
shared_packages/aurora_shared/aurora_shared/middleware/: __init__.py  api_key_auth.py  auth_middleware.py  error_handlers.py  rate_limit.py  request_id.py
shared_packages/aurora_shared/aurora_shared/services/: admin_audit_service.py  analytics_service.py  auth_oidc.py  auth_service.py  exec_events.py  permissions.py  webauthn_service.py  whatsapp_identity.py
shared_packages/aurora_shared/aurora_shared/services/identity/: __init__.py  invitation_service.py  organization_service.py  pairing.py  tax_id.py
(+392 files in other folders)
