[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-log = "2"

# macOS-only Touch ID + Keychain bindings (used by src/keychain.rs).
# `security-framework` is the Rust wrapper around macOS Security.framework;
# `core-foundation` is needed for the CF*Ref types its API consumes.
#
# IMPORTANT: pin core-foundation to 0.9.x so the TCFType trait identity
# matches the one security-framework 2.x uses internally. core-foundation
# 0.10 ships an incompatible (technically the same code, but identified as
# a different trait by the compiler) TCFType — methods like as_CFTypeRef()
# on SecAccessControl become unresolvable across the version boundary.
[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "2"
security-framework-sys = "2"
core-foundation = "0.9"
core-foundation-sys = "0.8"
